@@ -1,3 +1,7 @@
+2014-11-14  Mark Wielaard  <mjw@redhat.com>
+
+	* readelf.c (handle_versym): Check def == NULL before use.
+
 2014-11-08  Mark Wielaard  <mjw@redhat.com>
 
 	* readelf.c (handle_versym): Initialize vername and filename array
